[project]
name = "flights-points-tool"
version = "0.1.0"
description = "MCP server to convert flight prices to points (Chase, American, United) for use with Google Flights MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "truststore>=0.10.4",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
scrape = ["playwright>=1.40.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flights_points"]
